Setting max width on movie details image to resolve overflow isssue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,13 +221,14 @@ header {
     margin-top: 42px;
     font-family: 'Montserrat', sans-serif;
 }
+
 #poster {
     max-height: 359px;
     max-width: 638px;
 }
 #poster img {
     width: 100%;
-    height: 95%;
+    max-height: 359px;
 }
 
 #director span, #cast span, #runtime span, #release-date span {
